@startuml

title __USER's Class Diagram__\n

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        class edu.tanta.fci.reoil.user.UserController {
            + UserController()
            + addAddress()
            + deleteAddress()
            + getAddresses()
            + getProfile()
            + update()
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        class edu.tanta.fci.reoil.user.UserService {
            {static} - log : Logger
            - passwordEncoder : PasswordEncoder
            + UserService()
            + changePassword()
            + createUser()
            + deleteAddressById()
            + enableUser()
            + findByEmail()
            + findByUsername()
            + isUserExistByEmail()
            + loadUserByUsername()
            + resetPassword()
            ~ addAddress()
            ~ findAddressesByUsername()
            ~ findProfileByUsername()
            ~ updateProfile()
            - toAddress()
        }
      }
    }
  }
  

  edu.tanta.fci.reoil.user.UserController o-- edu.tanta.fci.reoil.user.UserService : userService
  edu.tanta.fci.reoil.user.UserService .up.|> org.springframework.security.core.userdetails.UserDetailsService
  edu.tanta.fci.reoil.user.UserService o-- edu.tanta.fci.reoil.repositories.AddressRepository : addressRepository
  edu.tanta.fci.reoil.user.UserService o-- edu.tanta.fci.reoil.repositories.RoleRepository : roleRepository
  edu.tanta.fci.reoil.user.UserService o-- edu.tanta.fci.reoil.repositories.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
